Fix the nav bar wrapping on mobile.
Always put a border on the nav items, so that they're always the same height as the active one, and thus don't push the next line out of the way when wrapped.

--- a/root/var/www/aspishakthomas.com/style.css
+++ b/root/var/www/aspishakthomas.com/style.css
@@ -34,6 +34,7 @@ a {
 }
 
 .nav-item {
+    border-bottom: 2px solid transparent;
     float: left;
     font-size: 1.2rem;
     font-variant: small-caps;
@@ -49,7 +50,7 @@ a {
 
 .nav-item:hover,
 .nav-item.active {
-    border-bottom: 2px solid;
+    border-bottom-color: black;
     color: black;
 }
 
